applications/test-api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: testapibackendsvc
spec:
  selector:
    app: testapi
  ports:
    - protocol: TCP
      port: 10000
      targetPort: 10000
