applications/test-api/ciliumNetworkPolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: testapiserver-block-egress
specs:
  - description: "Allow egress to testapibackendsvc from testapiserver"
    endpointSelector:
      matchLabels:
        app: testapiserver
    egress:
      - {}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: testapi-allow-ingress-frontend
specs:
  - description: "Allow ingress from testapiserver"
    endpointSelector:
      matchLabels:
        app: testapi
    ingress:
      - toEndpoints:
        - matchLabels:
            app: testapiserver
